# zenextras

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  fuzz-r2.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_render.rs
scripts/: fuzz-corpus.sh
src/: codec.rs  decode.rs  encode.rs  error.rs  format.rs  lib.rs  optimize.rs  render.rs  zencodec_impl.rs
tests/: basic.rs  zencodec_integration.rs
zenjp2/: Cargo.toml  README.crates.md  README.md
zenjp2/.superwork/: release-analysis.toml
zenjp2/src/: alloc_util.rs  codec.rs  error.rs  lib.rs
zenjp2/tests/: zencodec_truncation.rs
zenjp2/tests/fixtures/: test.j2k  test.jp2
zenpdf/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.crates.md
zenpdf/.github/workflows/: fuzz.yml
zenpdf/fuzz/: CORPUS.md  Cargo.toml  pdf.dict
zenpdf/fuzz/fuzz_targets/: fuzz_render.rs  fuzz_render_pages.rs
zenpdf/src/: alloc_util.rs  error.rs  lib.rs  render.rs  zencodec_impl.rs
zenpdf/tests/: basic.rs  zencodec_integration.rs  zencodec_truncation.rs
zensvg/: Cargo.toml  README.crates.md  README.md
zensvg/fuzz/: CORPUS.md  Cargo.toml  svg.dict
zensvg/fuzz/fuzz_targets/: fuzz_parse.rs
zensvg/fuzz/regression/fuzz_parse/: crash-4bda25af71385aad8a72fe801e266926ebee0694
zensvg/fuzz/regression/fuzz_render/: crash-22bab3eb77f754c9382fdb72bbd756cbb8b3b006
zensvg/src/: alloc_util.rs  codec.rs  error.rs  format.rs  lib.rs  optimize.rs  render.rs
zensvg/tests/: integration.rs
zensvg/tests/integration/: truncation_series.rs
zentiff/: CHANGELOG.md  Cargo.toml  README.crates.md  README.md  justfile
zentiff/benchmarks/: tiff_decode_mem_2026-06-23.tsv
zentiff/docs/: VARIANT_GENERATION.md
zentiff/examples/: heaptrack_decode.rs  mem_probe.rs
zentiff/fuzz/: CORPUS.md  Cargo.toml
zentiff/fuzz/regression/fuzz_decode/: oom-ec38252b41a4aa4f13530905d622cdc061d739a1
zentiff/src/: alloc_util.rs  codec.rs  decode.rs  encode.rs  error.rs  lib.rs  sweep.rs
zentiff/tests/: orientation.rs  panic_isolation.rs  roundtrip.rs  sweep_validate.rs  zencodec_integration.rs
