[workspace]
resolver = "2"
members = [
    "zentiff",
    "zensvg",
    "zenjp2",
    "zenpdf",
]

[patch.crates-io]
# TEMP: until zencodec 0.1.26 ships (PR #103, superseded by PR #116's two-level
# origin-first `ErrorCategory` reshape) — provides the unreleased
# `CategorizedError` taxonomy (trait + `ErrorCategory` + `LimitKind`) plus the
# zencodec-testkit `check_decode_truncation_series` conformance check, used by
# this workspace's members (zentiff, zensvg, zenjp2, zenpdf). A workspace
# member's own [patch] is ignored by cargo, so it lives here at the workspace
# root. Remove this patch and bump each member's `zencodec` version dependency
# once 0.1.26 is published. Pinned to a commit rev (not the branch tip) for
# reproducible builds, and to the SAME rev as each member's `zencodec-testkit`
# dev-dep so both resolve to one unified zencodec; bump the rev deliberately.
zencodec = { git = "https://github.com/imazen/zencodec", rev = "44ca79279b265ba7dfe01a2b31ef74788429509a" }

# TEMP (security): our lilith/hayro fork adds an output-size cap to the
# FlateDecode/LZWDecode path (MAX_DECODED_STREAM_BYTES), fixing the
# decompression-bomb DoS (2026-07-18 security audit C3) that upstream
# hayro-syntax 0.7.2 still has. Drop this patch once the fix lands in a
# published hayro-syntax release (or upstream merges it and releases). Pinned to
# a commit rev for reproducible builds.
hayro-syntax = { git = "https://github.com/lilith/hayro", rev = "beec7225f7f8cec6cb62f6ecf116db738177d0b9" }

# TEMP (security): our lilith/image-tiff fork bounds the per-tile-row scratch
# allocation (derived from the attacker-controlled TileWidth) by the
# intermediate-buffer limit, fixing the multi-GB-allocation DoS (2026-07-18
# security audit C8) that upstream tiff 0.11.3 still has (it checks only for
# integer overflow, not a byte limit). Used by zentiff. Drop this patch once the
# fix lands in a published `tiff` release (or upstream merges it and releases).
# Pinned to a commit rev for reproducible builds.
tiff = { git = "https://github.com/lilith/image-tiff", rev = "ad468f42bb5a9a6d8ad3eff062c227e83212e1bc" }
