[package]
name = "zenjp2"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
description = "JPEG 2000 decoder for the zen codec ecosystem, wrapping hayro-jpeg2000"
categories = ["multimedia::images"]
keywords = ["image", "codec", "jpeg2000", "jp2", "j2k"]
repository = "https://github.com/imazen/zenjp2"
include = ["/src/**", "/README.md", "/CHANGELOG.md", "/LICENSE*"]

[dependencies]
hayro-jpeg2000 = { version = "0.3.4", default-features = false, features = ["std"] }
zencodec = { optional = true, version = "0.1.13" }
zenpixels = { version = "0.2.10", default-features = false }
whereat = { version = "0.1.5", default-features = false }
enough = { version = "0.4.3", default-features = false }
thiserror = { version = "2.0", default-features = false }

[features]
default = ["std", "zencodec"]
std = []
zencodec = ["dep:zencodec"]

[dev-dependencies]
codec-corpus = "1"
