[package]
name = "zenjp2"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
description = "JPEG 2000 decoder for the zen codec ecosystem, wrapping hayro-jpeg2000"
categories = ["multimedia::images"]
keywords = ["image", "codec", "jpeg2000", "jp2", "j2k"]
repository = "https://github.com/imazen/zenextras"
documentation = "https://docs.rs/zenjp2"
readme = "README.crates.md"
include = ["/src/**", "/README.crates.md", "/CHANGELOG.md", "/LICENSE*"]

[dependencies]
hayro-jpeg2000 = { version = "0.3.4", default-features = false, features = ["std"] }
zencodec = { optional = true, version = "0.1.25" }
zenpixels = { version = "0.2.10", default-features = false }
whereat = { version = "0.1.5", default-features = false }
enough = { version = "0.4.3", default-features = false }
thiserror = { version = "2.0", default-features = false }

[features]
default = ["std", "zencodec"]
std = []
zencodec = ["dep:zencodec"]

[dev-dependencies]
codec-corpus = "1"
# zencodec conformance harness (unpublished companion crate). Git-pinned to the
# SAME zencodec rev as the workspace-root [patch.crates-io] so both resolve to
# one unified zencodec. Provides check_decode_truncation_series /
# check_decode_error_envelope (EOF/truncation + envelope-survives-erasure
# conformance). Drop for a crates.io version dep once zencodec 0.1.25+ +
# testkit publish. (`[patch.crates-io]` itself lives in the workspace-root
# Cargo.toml — Cargo only honors patches declared there, not in a member's
# manifest.)
zencodec-testkit = { git = "https://github.com/imazen/zencodec", rev = "2427387f86c77fdf773ae2fa219926a49cd32d99" }
