[package]
name = "zenpdf"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "PDF page renderer via hayro with page selection and render bounds"
categories = ["multimedia::images"]
keywords = ["pdf", "render", "rasterize", "hayro"]
repository = "https://github.com/imazen/zenextras"
documentation = "https://docs.rs/zenpdf"
readme = "README.crates.md"
# README.md stays in the package: src/lib.rs does `#![doc = include_str!("../README.md")]`
# (it is the docs.rs source). README.crates.md is the crates.io-rendered copy.
include = ["/src/**", "/README.md", "/README.crates.md", "/CHANGELOG.md", "/LICENSE*", "/tests/**/*.rs", "/tests/fixtures/**"]

[dependencies]
hayro = { version = "0.5.0", default-features = true }
hayro-syntax = "0.5.0"
rgb = { version = "0.8.53", default-features = false, features = ["as-bytes"] }
thiserror = { version = "2.0.18", default-features = false }
whereat = { version = "0.1.5", default-features = false }
zencodec = { version = "0.1.25", optional = true }
zenpixels = { version = "0.2.10", default-features = false, features = ["rgb", "std"] }

[dev-dependencies]
enough = "0.4.3"
# TEMP (drop at zencodec 0.1.26): unpublished companion crate carrying the
# truncation-series conformance check. SAME rev as the workspace-root
# [patch.crates-io] zencodec pin → one unified zencodec across the graph.
zencodec-testkit = { git = "https://github.com/imazen/zencodec", rev = "2427387f86c77fdf773ae2fa219926a49cd32d99" }

[package.metadata.docs.rs]
all-features = true

[features]
default = ["zencodec"]
zencodec = ["dep:zencodec"]
