[package]
name = "zensvg"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
description = "SVG rendering and lossless optimization with zencodec integration"
categories = ["multimedia::images", "graphics"]
keywords = ["svg", "svgz", "render", "optimize", "image"]
repository = "https://github.com/imazen/zensvg"

[lib]
name = "zensvg"

[dependencies]
resvg = "0.47.0"
usvg = "0.47.0"
tiny-skia = "0.12.0"

# zencodec integration
zencodec = "0.1.13"
zenpixels = "0.2.2"
enough = "0.4.3"

# SVG optimization (optional)
flate2 = { version = "1.1.9", optional = true }
quick-xml = { version = "0.39.2", optional = true }

[features]
default = ["std", "text"]
std = []
text = []
optimize = ["dep:flate2", "dep:quick-xml"]

[dev-dependencies]
