[package]
name = "zensvg"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
description = "SVG rendering and lossless optimization with zencodec integration"
categories = ["multimedia::images", "graphics"]
keywords = ["svg", "svgz", "render", "optimize", "image"]
repository = "https://github.com/imazen/zenextras"
documentation = "https://docs.rs/zensvg"
# README.md stays in the package: src/lib.rs does `#![doc = include_str!("../README.md")]`
# (it is the docs.rs source). README.crates.md is the crates.io-rendered copy.
readme = "README.crates.md"
include = ["/src/**", "/README.md", "/README.crates.md", "/CHANGELOG.md", "/LICENSE*"]

[lib]
name = "zensvg"

[dependencies]
resvg = "0.47.0"
usvg = "0.47.0"
tiny-skia = "0.12.0"

# zencodec integration
zencodec = "0.1.25"
zenpixels = "0.2.10"
enough = "0.4.3"
whereat = "0.1.5"

# SVG optimization (optional)
flate2 = { version = "1.1.9", optional = true }
quick-xml = { version = "0.39.2", optional = true }

[features]
default = ["std", "text"]
std = []
text = []
optimize = ["dep:flate2", "dep:quick-xml"]

[dev-dependencies]
# zencodec conformance harness (unpublished companion crate). Git-pinned to the
# SAME zencodec rev as the workspace-root [patch.crates-io] so both resolve to
# one unified zencodec. Provides check_decode_truncation_series (EOF/truncation).
# Drop for a crates.io version dep once zencodec 0.1.26 + testkit publish.
zencodec-testkit = { git = "https://github.com/imazen/zencodec", rev = "2427387f86c77fdf773ae2fa219926a49cd32d99" }
