[package]
name = "zentiff"
version = "0.1.2"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "TIFF decoding and encoding wrapper with zenpixels integration"
categories = ["multimedia::images", "multimedia::encoding"]
keywords = ["tiff", "image", "decoder", "encoder", "codec"]
repository = "https://github.com/imazen/zenextras"
documentation = "https://docs.rs/zentiff"
readme = "README.crates.md"
include = ["/src/**", "/README.crates.md", "/CHANGELOG.md", "/LICENSE*", "/tests/**/*.rs", "/examples/**/*.rs"]

[dependencies]
tiff = { version = "0.11.3", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
whereat = { version = "0.1.5", default-features = false }
enough = { version = "0.4.3", default-features = false }
zenpixels = { version = "0.2.10", default-features = false }
zencodec = { version = "0.1.25", optional = true }
# Two zencodec-adapter uses, gated under `zencodec` so the no_std core stays
# dependency-free: (1) orientation baking (apply_orientation) for the bake
# path — image-tiff itself has no orientation bake (see decode.rs Orientation
# TODO), so the adapter resolves OrientationHint by physically rotating the
# decoded buffer; (2) synthesizing an ICC profile from CICP primaries when
# lowering a CICP-only source for a format (TIFF) with no CICP carrier.
zenpixels-convert = { version = "0.2.13", default-features = false, optional = true }
bytemuck = { version = "1.25.0", default-features = false, features = ["extern_crate_alloc"] }

[dev-dependencies]
codec-corpus = "1.0.3"
# Build TIFF fixtures with a native EXIF Orientation tag (tag 274) for the
# zencodec adapter's orientation tests — image-tiff is already a normal dep,
# but not re-exported, so the tests reach it directly.
tiff = { version = "0.11.3", default-features = false }
# zencodec conformance harness (unpublished companion crate). Git-pinned to the
# SAME zencodec rev as the [patch.crates-io] in the workspace root so both
# resolve to one unified zencodec. Provides check_decode_truncation_series
# (EOF/truncation). Drop for a crates.io version dep once zencodec 0.1.26 +
# testkit publish.
zencodec-testkit = { git = "https://github.com/imazen/zencodec", rev = "2427387f86c77fdf773ae2fa219926a49cd32d99" }

[features]
default = ["std", "deflate", "lzw"]
all-codecs = ["deflate", "fax", "jpeg", "lzw", "webp", "zstd"]
std = ["tiff/default", "enough/std", "whereat/std"]
deflate = ["tiff/deflate"]
fax = ["tiff/fax"]
jpeg = ["tiff/jpeg"]
lzw = ["tiff/lzw"]
webp = ["tiff/webp"]
zstd = ["tiff/zstd"]
# `zencodec/std` is requested unconditionally here (not tied to zentiff's own
# `std` feature) because zentiff always links `std` (see `extern crate std;` in
# lib.rs) and `TiffError::Io` always holds a real `std::io::Error` — this just
# unlocks zencodec's `CodecIoKind::from(&std::io::Error)` so the `Io` category
# preserves the real `ErrorKind` instead of falling back to `CodecIoKind::opaque()`.
zencodec = ["dep:zencodec", "dep:zenpixels-convert", "zencodec/std"]
# Palette TIFF support requires tiff crate's color_map() API, which is
# not available in tiff 0.11.x (only on git main). Enable this feature
# once tiff 0.12+ is released. Not included in all-codecs or default.
_palette = []
# Expert-only cross-codec uniformity knobs. Pure visibility gate (no deps):
# exposes `InternalParams` + `TiffEncodeConfig::with_internal_params`, mirroring
# `zenjpeg`'s `__expert` feature so a single picker model can drive every zen
# codec with one Option-bundle shape. No new tunables — the fields route
# through existing public builder setters.
__expert = []

[package.metadata.docs.rs]
features = ["all-codecs", "zencodec"]

[profile.test]
opt-level = 2

# Heaptrack allocation-profiling harness for the decode-from-bytes path.
# Decode works with default features; the synthetic fixture uses the `tiff`
# dev-dependency encoder. No extra features needed.
[[example]]
name = "heaptrack_decode"
